--- a/client-server/package.json
+++ b/client-server/package.json
@@ -9,7 +9,11 @@
   "author": "\\",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "nedb": "^1.8.0",
+    "querystring": "^0.2.0",
+    "request": "^2.85.0",
     "socket.io": "^2.0.3",
     "spotify-web-api-js": "^0.22.0",
     "spotify-web-api-node": "^2.4.0"
